
2004/04/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- renamed acx_windoze_paths.m4 to windoze.m4 thus overwriting the latter
  file, since it basically contains the stuff which is in windoze.m4 plus
  some minor additions.
  This should take care of some autotool complaints...


2004/04/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added base module "args" which transforms command line arguments to
  a GWEN_DB. It performs some checks on the arguments given and makes it
  easier to create help screens.
- debugged module "args" (it now works as intended)
- GWEN_Args_Usage() is now able to produce an ASCII help screen using
  GWEN_ARGS
- changed GWEN_ARGS so that it can now be used as const. All functions
  now accept "const GWEN_ARGS*" pointers.


2004-04-16  Christian Stimming <stimming@tuhh.de>

	* src/base/debug.c: Fix DBG_* functions that are the replacements
	for their variadic-macros counterpart. Unfortunately this error
	caused every gwen version built with --disable-variadic-macros to
	crash -- sorry. But it is fixed now.


2004-04-08  Christian Stimming <stimming@tuhh.de>

	* m4/ssl.m4: For openssl on windows, check more than one directory
	for the location of the DLLs.


===========================================================================
MARK: released gwenhywfar-0.9.9 (2004/04/08)
===========================================================================


2004/04/08: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io/bufferedio: 
  - added flag functions to set/get flags which control the behaviour of a 
    BufferedIO
  - split into multiple object files for the different supported BufferedIOs
  - now the GWEN_BUFFEREDIO type is opaque, its strcuture is no longer
    exported to the supported BufferedIOs
  - now uses the inherit module
  The changes above now allow for new BufferedIOs to be created outside Gwen.

