@@ -32,8 +32,8 @@ if test ${GCC}x = yesx; then
   AC_ARG_ENABLE(warnings,
     [  --enable-warnings       enable compilation warnings, default=yes],
     [case "${enableval}" in
-       yes) CXXFLAGS="${CXXFLAGS} -Wall "
-	    CFLAGS="${CFLAGS} -Wall " ;;
+       yes) CXXFLAGS="${CXXFLAGS} -Wall"
+	    CFLAGS="${CFLAGS} -Wall" ;;
        all) CXXFLAGS="${CXXFLAGS} -Wall -pedantic -ansi"
 	    CFLAGS="${CFLAGS} -Wall -pedantic -ansi" ;;
        no) ;;
@@ -44,6 +44,19 @@ if test ${GCC}x = yesx; then
      CXXFLAGS="${CXXFLAGS} -Wall" 
      CFLAGS="${CFLAGS} -Wall" 
   ])
+
+  dnl For gcc >= 3.4.x, specifically enable the new warning switch
+  dnl -Wdeclaration-after-statement in order to preserve source code
+  dnl compatibility to gcc 2.95 and other compilers.
+  GCC_VERSION=`${CC} -dumpversion`
+  if test `echo ${GCC_VERSION} | cut -d. -f1` -ge 3; then
+     # This is gcc >= 3.x.x
+     if test `echo ${GCC_VERSION} | cut -d. -f2` -ge 4; then
+	# This is gcc >= 3.4.x
+	CFLAGS="${CFLAGS} -Wdeclaration-after-statement"
+     fi
+  fi
+
   dnl For enabling error on warnings
   AC_ARG_ENABLE(error-on-warning,
     [  --enable-error-on-warning treat all compile warnings as errors, default=no],
