@@ -1,3 +1,8 @@
+2004-04-26  Christian Stimming <stimming@tuhh.de>
+
+	* m4/acx_compile_warn.m4: For gcc3.4, add the new warning switch
+	-Wdeclaration-after-statement in order to preserve source code
+	compatibility with gcc2.95 and other compilers.
 
 2004/04/25: Martin Preuss<martin@libchipcard.de>
 ------------------------------------------------
